--- a/SmartGreenHouse_web/package.json
+++ b/SmartGreenHouse_web/package.json
@@ -17,6 +17,8 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
